Fix jumbotron on IE11

--- a/css/style.css
+++ b/css/style.css
@@ -1204,6 +1204,9 @@ textarea:required {
 
 .clip {
   position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   display: block;
   font-family: "Poppins", "Open Sans", sans-serif;
   font-size: 14rem;
@@ -1275,6 +1278,25 @@ textarea:required {
     opacity: 0.3;
     font-size: 6rem;
     line-height: 30px;
+  }
+}
+
+@media (max-width: 320px) {
+  .jumbotron {
+    background: #000 url("../images/jumbo-mobile.jpg") no-repeat;
+    background-position: center center;
+    background-size: cover;
+  }
+  .jumbotron__title {
+    font-size: 3rem;
+  }
+  .jumbotron__subtitle {
+    font-size: 2rem;
+  }
+  .clip {
+    opacity: 0.3;
+    font-size: 5.4rem;
+    line-height: 28px;
   }
 }
 
