--- a/sass/partials/_jumbotron.scss
+++ b/sass/partials/_jumbotron.scss
@@ -28,9 +28,9 @@
 
 .clip {
   position: absolute;
-  // top: 50%;
-  // left: 50%;
-  // transform: translate(-50%,-50%);
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
   display: block;
   font-family: $jumbo-font;
   font-size: 14rem;
@@ -102,5 +102,23 @@
     opacity: 0.3;
     font-size: 6rem;
     line-height: 30px;
+  }
+}
+@media (max-width: 320px) {
+  .jumbotron {
+    background: $black url('../images/jumbo-mobile.jpg') no-repeat;
+    background-position: center center;
+    background-size: cover;
+    &__title {
+      font-size: 3rem;
+    }
+    &__subtitle {
+      font-size: 2rem;
+    }
+  }
+  .clip {
+    opacity: 0.3;
+    font-size: 5.4rem;
+    line-height: 28px;
   }
 }
